
Reggie, 13.4.1999:
------------------
- Fixes

Reggie, 21.4.1999:
------------------
- Unicoded KPresenter and KTextObject (also load and save)
- Fixes in keycompression of KTextObject

Reggie, 26.4.1999:
------------------
- Using now the KCharSelect widget of libkdeui for the character selector dialog
- More work on unicode
- Corrected some stuff in the templates

Reggie, 27.4.1999:
------------------
- Some fixes in autoforms
- Added some new autoforms

Reggie, 28.4.1999:
------------------
- Fix with line begins and line ends

Reggie, 1.5.1999:
-----------------
- Using new template dialog
- Fix in autoformat choose dialog
- Started with implementation of HTML slideshow creation

Reggie, 2.5.1999:
-----------------
- Some fixes
- Finished implementation of HTML slideshow creation

Reggie, 3.5.1999:
-----------------
- Added PNG to filters when opening KFileDialog for opening a pic
- Fixes in pixmap loading

Reggie, 4.5.1999:
-----------------
- HTML Sideshow generation tries now to find titles for the slides
  with looking through the text objects of each slide itself
  (No "Slide_X" deafult titles anymore :-)
- Some cosmetic fixes in the HTML Slidshow generation dialogs

Reggie, 5.5.1999:
-----------------
- Started implementing footers and headers
- Fixed a mem leak

Reggie, 6.5.1999:
-----------------
- More work on headers and footers
- KTextObject knows now if it was modified

Reggie, 7.5.1999:
-----------------
- More work and headers and footers

Reggie, 8.5.1999:
-----------------
- More work and headers and footers

Reggie, 9.5.1999:
-----------------
- Implemented loading/saving headers and footers
- Headers/Footers are correctly drawn in screen presentations now

Reggie, 10.5.1999:
------------------
- More work on editing headers/footers
- Implemented "Extend contents to object height" feature for textobjects
  (this means the linespacing/paragraphspacing is set to values then,
   so that the text fills the whole object rectangle)